; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_predicate.c_SerializationNeededForRead.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/storage/lmgr/extr_predicate.c_SerializationNeededForRead.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MySerializableXact = common dso_local global i64 0, align 8
@InvalidSerializableXact = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @SerializationNeededForRead to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @SerializationNeededForRead(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i64, i64* @MySerializableXact, align 8
  %7 = load i64, i64* @InvalidSerializableXact, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %27

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @IsMVCCSnapshot(i32 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %10
  store i32 0, i32* %3, align 4
  br label %27

15:                                               ; preds = %10
  %16 = load i64, i64* @MySerializableXact, align 8
  %17 = call i64 @SxactIsROSafe(i64 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %15
  %20 = call i32 @ReleasePredicateLocks(i32 0, i32 1)
  store i32 0, i32* %3, align 4
  br label %27

21:                                               ; preds = %15
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @PredicateLockingNeededForRelation(i32 %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %26, label %25

25:                                               ; preds = %21
  store i32 0, i32* %3, align 4
  br label %27

26:                                               ; preds = %21
  store i32 1, i32* %3, align 4
  br label %27

27:                                               ; preds = %26, %25, %19, %14, %9
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @IsMVCCSnapshot(i32) #1

declare dso_local i64 @SxactIsROSafe(i64) #1

declare dso_local i32 @ReleasePredicateLocks(i32, i32) #1

declare dso_local i32 @PredicateLockingNeededForRelation(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
